# modifyorcaslicer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  external.cmake  version.inc
entry/app/: CMakeLists.txt  LightMaker.cpp  LightMaker.hpp  LightMaker_app_msvc.cpp  LightSlicerApp.cpp  LightSlicerApp.hpp
src/: CMakeLists.txt
src/build-utils/: CMakeLists.txt
src/clipper/: CMakeLists.txt  clipper.cpp
src/fullcontrol/: CMakeLists.txt  README.md
src/fullcontrol/examples/: test_multi_nozzle.cpp
src/fullcontrol/include/fullcontrol/: fullcontrol.h
src/fullcontrol/src/core/: point.cpp  printer.cpp  state.cpp
src/fullcontrol/src/gcode/: commands.cpp  gcode_generator.cpp
src/fullcontrol/src/geometry/: arcs.cpp  shapes.cpp  vector.cpp
src/fullcontrol/src/multi_nozzle_calibration/: multi_nozzle_calibration.cpp
src/hints/: HintsToPot.cpp
src/imgui/: CMakeLists.txt
src/imguizmo/: CMakeLists.txt
src/libslic3r/: AABBMesh.cpp  AABBMesh.hpp  AppConfig.cpp  AppConfig.hpp  Arrange.cpp  Arrange.hpp  BuildVolume.cpp  BuildVolume.hpp  CMakeLists.txt  ClipperUtils.cpp  Color.cpp  Config.cpp  Config.hpp  FlushVolCalc.cpp  GCode.cpp  GCode.hpp  GCodeReader.cpp  GCodeWriter.cpp  GCodeWriter.hpp  MeshBoolean.cpp  MeshSplitImpl.hpp  Model.cpp  Model.hpp  PerimeterGenerator.cpp  PlaceholderParser.cpp  Point.hpp  Preset.cpp  PresetBundle.cpp  PresetBundle.hpp  Print.cpp  Print.hpp  PrintBase.cpp  PrintConfig.cpp  PrintConfig.hpp  PrintObject.cpp  PrintObjectSlice.cpp  ProjectTask.cpp  QuadricEdgeCollapse.cpp  ShortestPath.cpp  SlicesToTriangleMesh.cpp  (+9 more)
src/libslic3r/Base/: Concurrency.hpp  Platform.cpp  Platform.hpp  Thread.cpp
src/libslic3r/CSGMesh/: CSGMesh.hpp  ModelToCSGMesh.hpp  PerformCSGMeshBooleans.hpp  SliceCSGMesh.hpp
src/libslic3r/Config/: AppConfigImpl.cpp  CalibrationConfig.hpp  PresetLoad.cpp  PresetLoad.hpp  ThemeDef.hpp
src/libslic3r/FileSystem/: DataDir.cpp  DataDir.hpp  FileHelp.cpp  FileHelp.hpp  Log.cpp  Log.hpp  LogUtil.cpp  LogUtil.hpp  fts_fuzzy_match.h  json_diff.cpp
src/libslic3r/Format/: 3mf.cpp  AMF.cpp  STEP.cpp  ZipperArchiveImport.cpp  bbs_3mf.cpp  bbs_3mf.hpp
src/libslic3r/GCode/: GCodeProcessor.cpp  GCodeProcessor.hpp  Thumbnails.cpp  ToolOrdering.cpp  ToolOrdering.hpp  WipeTower.cpp  WipeTower2.cpp
src/libslic3r/SLA/: IndexedMesh.cpp  IndexedMesh.hpp
src/libslic3r/Support/: TreeSupport3D.cpp
src/platform/msw/: LightMaker.rc.in
src/platform/unix/: BuildLinuxImage.sh.in  build_appimage.sh.in
src/qhull/: CMakeLists.txt
src/semver/: semver.c
src/slic3r/: CMakeLists.txt  pchheader.hpp
src/slic3r/Config/: AppConfig.cpp  AppConfig.hpp  AppPreset.cpp  AppPreset.hpp  ConfigManipulation.cpp  ConfigManipulation.hpp  ConfigUtils.cpp  ConfigUtils.hpp  Field.cpp  Field.hpp  OG_CustomCtrl.cpp  OG_CustomCtrl.hpp  OptionsGroup.cpp  OptionsGroup.hpp  ParamsPanel.cpp  ParamsPanel.hpp  PresetComboBoxes.cpp  PresetComboBoxes.hpp  PresetHints.cpp  PresetHints.hpp  PresetUpdater.cpp  PresetUpdater.hpp  Search.cpp  Search.hpp  Snapshot.cpp  Snapshot.hpp  Version.cpp  Version.hpp  VersionInfo.cpp  VersionInfo.hpp
src/slic3r/GCode/: GCodeDefine.cpp  GCodeDefine.hpp  GCodeExtensions.cpp  GCodeExtensions.hpp  GCodePanel.cpp  GCodePanel.hpp  GCodePlayer.cpp  GCodePlayer.hpp  GCodeRenderer.cpp  GCodeRenderer.hpp  GCodeViewInstance.cpp  GCodeViewInstance.hpp  GCodeViewerData.cpp  GCodeViewerData.hpp  GCodeViewerState.cpp  GCodeViewerState.hpp
src/slic3r/GUI/: AppAdapter.cpp  AppAdapter.hpp  BaseException.cpp  BaseException.h  BitmapComboBox.cpp  GUI.cpp  GUI.hpp  GUI_App.cpp  GUI_App.hpp  GUI_Factories.cpp  GUI_Factories.hpp  GUI_Utils.cpp  GUI_Utils.hpp  MainFrame.cpp  MainFrame.hpp  MainPanel.cpp  MainPanel.hpp  MarkdownTip.cpp  Tab.cpp  Tab.hpp  wxExtensions.cpp  wxExtensions.hpp
src/slic3r/GUI/Calibration/: CalibrationGUIDef.hpp  calib_dlg.cpp  (+1 more)
src/slic3r/Global/: AppI18N.cpp  AppI18N.hpp  AppModule.cpp  AppModule.hpp  InstanceCheck.cpp  InstanceCheck.hpp  InstanceCheckMac.mm  ProjectFlow.cpp  ProjectFlow.hpp
src/slic3r/Net/: Downloader.cpp  Downloader.hpp  DownloaderFileGet.cpp  DownloaderFileGet.hpp  Http.cpp  Http.hpp
src/slic3r/Render/: 3DBed.cpp  3DBed.hpp  3DBedTexture.cpp  3DBedTexture.hpp  3DScene.cpp  3DScene.hpp  AppRender.cpp  AppRender.hpp  GCodePreviewCanvas.cpp  GCodePreviewCanvas.hpp  GCodeViewer.cpp  GCodeViewer.hpp  GLCanvas3D.cpp  GLCanvas3D.hpp  GLCanvas3DFacade.cpp  GLCanvas3DFacade.hpp  GLColors.cpp  GLModel.cpp  GLSelectionRectangle.cpp  GLShader.cpp  GLShadersManager.cpp  GLShadersManager.hpp  GLTexture.cpp  GLTexture.hpp  GLToolbar.cpp  GLToolbar.hpp  GUI_Geometry.cpp  IMToolbar.cpp  IMToolbar.hpp  LayersEditing.cpp  LayersEditing.hpp  MeshUtils.cpp  MeshUtils.hpp  Mouse3DController.cpp  OpenGLManager.cpp  OpenGLManager.hpp  PlateBed.cpp  PlateBed.hpp  RaycastManager.cpp  RaycastManager.hpp  (+11 more)
src/slic3r/Scene/: Boolean.cpp  Boolean.hpp  Camera.cpp  Camera.hpp  CameraUtils.cpp  CameraUtils.hpp  ExtraRenderers.cpp  HintNotification.cpp  NotificationManager.cpp  NotificationManager.hpp  ObjectDataViewModel.cpp  ObjectDataViewModel.hpp  PartPlate.cpp  PartPlate.hpp  PartPlateList.cpp  PartPlateList.hpp  SceneDataDef.hpp  SlicingProgressNotification.cpp  SlicingProgressNotification.hpp
src/slic3r/Slice/: BackgroundSlicingProcess.cpp  BackgroundSlicingProcess.hpp  CalibrationDef.hpp  GCodeImportExporter.cpp  GCodeImportExporter.hpp  GCodeResultWrapper.cpp  GCodeResultWrapper.hpp  SlicingProcessCompletedEvent.cpp  SlicingProcessCompletedEvent.hpp  TickCode.hpp
src/slic3r/Theme/: AppColor.cpp  AppColor.hpp  AppFont.cpp  AppFont.hpp  BitmapCache.cpp  BitmapCache.hpp  ColorSpaceConvert.cpp  Font.cpp  Font.hpp  IconManager.cpp  IconManager.hpp  ThemeColorDef.hpp  ThemeSizeDef.hpp  WinDarkMode.cpp  WxFontUtils.cpp  WxFontUtils.hpp
src/slic3r/Utils/: AppWx.cpp  AppWx.hpp  AssociationFiles.cpp  AssociationFiles.hpp  FixModelByWin10.cpp  FixModelByWin10.hpp  Process.cpp  Profile.hpp  RemovableDriveManager.cpp  RemovableDriveManager.hpp  RemovableDriveManagerMM.mm  Str.cpp  Str.hpp  UndoRedo.cpp
(+285 files in other folders)
